kubernetes/apps/media/sabnzbd/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sabnzbd
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
